--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 client/node_modules
 backend/node_modules
 models/ML_Models/mask_detector.h5
-client/assets/machine_learning
+client/assets/machine_learning/group1-shard1of1.bin
