--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tensorflow-models/blazeface": "^0.0.7",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.11.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
