--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-unimodules": "^0.14.10",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
