--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@tensorflow-models/blazeface": "^0.0.7",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.11.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
+    "expo-gl": "^7.0.0",
     "expo-status-bar": "~1.1.0",
     "jpeg-js": "^0.4.3",
     "react": "^17.0.1",
@@ -29,6 +31,7 @@
     "react-freeze": "^1.0.0",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.18.0",
     "react-native-paper": "^4.10.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.3.2",
