--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
+    "expo-face-detector": "~11.0.3",
     "expo-gl": "^7.0.0",
     "expo-status-bar": "~1.1.0",
     "jpeg-js": "^0.4.3",
@@ -30,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-freeze": "^1.0.0",
     "react-native": "0.64.3",
+    "react-native-camera-kit": "^11.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-paper": "^4.10.1",
